# RPISensorClient

./: .gitignore  CMakeLists.txt  DHT11.c  DHT11.h  MQTT.c  MQTT.h  RPISensorClient.c  mk
Contrib/: CMakeLists.txt  rpisensorclient  rpisensorclient.cfg
RPISensorClient.xcodeproj/: project.pbxproj
RPISensorClient.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
RPISensorClient.xcodeproj/project.xcworkspace/xcshareddata/: RPISensorClient.xcscmblueprint
RPISensorClient.xcodeproj/project.xcworkspace/xcuserdata/bb.xcuserdatad/: UserInterfaceState.xcuserstate
RPISensorClient.xcodeproj/xcuserdata/bb.xcuserdatad/xcschemes/: RPISensorClient.xcscheme  xcschememanagement.plist
